lista de anuncios

--- a/src/app/dashboard/components/ads/ads-list/ads-list.component.scss
+++ b/src/app/dashboard/components/ads/ads-list/ads-list.component.scss
@@ -17,3 +17,43 @@
     background: var(--main-color2);
     color: white;
 }
+
+table {
+    width: 80%;
+    margin: 0 auto;
+    text-align: left;
+}
+
+.mat-header-cell
+{
+    color: black;
+    text-align: center;
+}
+
+.mat-cell
+{
+    color:rgba(0,0,0,.54);
+    padding: 0;
+    margin: 0;
+}
+
+td.mat-cell:last-of-type
+{
+    padding: 0;
+}
+
+.name
+{
+    cursor: pointer;
+}
+
+.buttons
+{
+    text-align: center;
+}
+
+.buttons .mat-stroked-button
+{
+    margin-left: 5px;
+    min-width: 40px;
+}
