--- a/src/app/dashboard/components/cursos/course-home/course-home.component.html
+++ b/src/app/dashboard/components/cursos/course-home/course-home.component.html
@@ -10,7 +10,7 @@
     </section>
     <section class="course-content">
         <div class="card">
-            <div class="img"><img src="/assets/img/info.png" alt=""></div>
+            <div class="img"><img src="/assets/icons/mortarboard.svg" alt=""></div>
 
             <div class="options">
                 <a (click)="openDialog()">Descripción</a>
@@ -18,7 +18,7 @@
         </div>
 
         <div class="card">
-            <div class="img"><img src="/assets/img/folder_document.png" alt=""></div>
+            <div class="img"><img src="/assets/icons/online-learning.svg" alt=""></div>
 
             <div class="options">
                 <a>Documentos</a>
@@ -26,7 +26,7 @@
         </div>
 
         <div class="card">
-            <div class="img"><img src="/assets/img/scorms.png" alt=""></div>
+            <div class="img"><img src="/assets/icons/online-lesson.svg" alt=""></div>
 
             <div class="options">
                 <a (click)="goToLessons()">Lecciones</a>
@@ -34,10 +34,10 @@
         </div>
 
         <div class="card">
-            <div class="img"><img src="/assets/img/gradebook.png" alt=""></div>
+            <div class="img"><img src="/assets/icons/check-list.svg" alt=""></div>
 
             <div class="options">
-                <a>Evaluaciones</a>
+                <a (click)="goToExercises()">Ejercicios</a>
                 <!-- <div class="icons">
                     <mat-icon>visibility</mat-icon>
                     <mat-icon>edit</mat-icon>
@@ -46,7 +46,7 @@
         </div>
 
         <div class="card">
-            <div class="img"><img src="/assets/img/forum.png" alt=""></div>
+            <div class="img"><img src="/assets/icons/charla.svg" alt=""></div>
 
             <div class="options">
                 <a>Foros</a>
@@ -58,7 +58,7 @@
         </div>
 
         <div class="card">
-            <div class="img"><img src="/assets/img/valves.png" alt=""></div>
+            <div class="img"><img src="/assets/icons/anuncio.svg" alt=""></div>
 
             <div class="options">
                 <a>Anuncios</a>
