--- a/src/app/dashboard/components/ads/ads-edit/ads-edit.component.html
+++ b/src/app/dashboard/components/ads/ads-edit/ads-edit.component.html
@@ -80,6 +80,10 @@
                     formControlName="description"
                 ></textarea>
             </mat-form-field>
+            <mat-slide-toggle
+                (change)="timeUpdate($event)">
+                ¿Desea actualizar fecha y hora?
+            </mat-slide-toggle>
         </div>
         <div class="buttons">
             <button
