--- a/src/app/dashboard/components/main/main.component.html
+++ b/src/app/dashboard/components/main/main.component.html
@@ -17,7 +17,7 @@
         </mat-card-header>
         <mat-card-content class="dashboard-card-content">
           <div *ngIf="card.title==='Usuarios'">
-            
+            <app-carousel></app-carousel>
           </div>
 
         </mat-card-content>
