--- a/src/app/dashboard/components/exercises/exercises-create/exercises-create.component.scss
+++ b/src/app/dashboard/components/exercises/exercises-create/exercises-create.component.scss
@@ -1,4 +1,46 @@
+* {
+    box-sizing: border-box;
+}
 
+main {
+    background: white;
+    box-shadow: 0px 2px 1px -1px rgb(0 0 0 / 20%), 0px 1px 1px 0px rgb(0 0 0 / 14%), 0px 1px 3px 0px rgb(0 0 0 / 12%);
+    border-radius: 4px;
+    margin: 36px auto;
+    padding: 24px;
+    width: 90%;
+}
+
+.exercise-options {
+    display: grid;
+    grid-template-columns: auto auto;
+    grid-template-rows: auto;
+    gap: 16px;
+}
+
+.exercise-options .option {
+    display: grid;
+    grid-template-columns: 80px 250px 60px;
+    gap: 16px;
+    background-color: white;
+    -webkit-box-shadow: 1px 1px 4px 1px rgba(0,0,0,0.5); 
+    box-shadow: 1px 1px 4px 1px rgba(0,0,0,0.5);
+    border-radius: 5px;
+    align-items: center;
+}
+
+.exercise-options .option img {
+    max-width: 90%;
+    padding: 5px;
+}
+
+.exercise-options .option .execise-name p {
+    color: var(--main-color2);
+    font-size: 1.1rem;
+    font-weight: 600;
+    padding: 0;
+    margin: 0;
+}
 
 .mat-menu-item img {
     width: 30px;
