--- a/src/app/dashboard/components/navigation/navigation.component.html
+++ b/src/app/dashboard/components/navigation/navigation.component.html
@@ -16,7 +16,7 @@
     <mat-accordion>
       <mat-expansion-panel (opened)="panelOpenState = true"
                           (closed)="panelOpenState = false">
-        <mat-expansion-panel-header class="admin-header">
+        <mat-expansion-panel-header *ngIf="logguedUser.perfil==='administrador'" class="admin-header">
           <mat-panel-title class="admin">
             <mat-list>
               <mat-list-item> 
