--- a/src/app/dashboard/components/navigation/navigation.component.html
+++ b/src/app/dashboard/components/navigation/navigation.component.html
@@ -65,7 +65,7 @@
             <button mat-icon-button>
               <mat-icon>info</mat-icon>
             </button>
-            <a mat-list-item routerLink="/dashboard/cursos">Cursos</a>
+            <a mat-list-item routerLink="/dashboard/course-registration">Cursos</a>
           </mat-list-item>
           <mat-list-item> Salt </mat-list-item>
           <mat-list-item> Paprika </mat-list-item>
