--- a/src/app/dashboard/components/exercises/exercises-create/exercises-create.component.scss
+++ b/src/app/dashboard/components/exercises/exercises-create/exercises-create.component.scss
@@ -6,54 +6,65 @@ main {
     background: white;
     box-shadow: 0px 2px 1px -1px rgb(0 0 0 / 20%), 0px 1px 1px 0px rgb(0 0 0 / 14%), 0px 1px 3px 0px rgb(0 0 0 / 12%);
     border-radius: 4px;
-    margin: 36px auto;
-    padding: 24px;
-    width: 90%;
+    margin: 0 auto;
+    padding-bottom: 16px;
+    width: 400px;
 }
 
-.exercise-options {
-    display: grid;
-    grid-template-columns: auto auto;
-    grid-template-rows: auto;
-    gap: 16px;
-}
-
-.exercise-options .option {
-    display: grid;
-    grid-template-columns: 80px 250px 60px;
-    gap: 16px;
-    background-color: white;
-    -webkit-box-shadow: 1px 1px 4px 1px rgba(0,0,0,0.5); 
-    box-shadow: 1px 1px 4px 1px rgba(0,0,0,0.5);
-    border-radius: 5px;
+.title {
+    display: flex;
+    justify-content: space-between;
+    //background: #37474f;
+    //background: #3f51b5;
+    background: var(--main-color2);
+    color: white;
+    padding: 8px 16px;
     align-items: center;
 }
 
-.exercise-options .option img {
-    max-width: 90%;
-    padding: 5px;
+.title mat-icon {
+    color: white;
 }
 
-.exercise-options .option .execise-name p {
-    color: var(--main-color2);
-    font-size: 1.1rem;
-    font-weight: 600;
-    padding: 0;
-    margin: 0;
+.title h2 {
+    font-weight: 500;
+    margin: 0 16px;
 }
 
-.mat-menu-item img {
-    width: 30px;
+mat-dialog-content {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 24px 0;
 }
 
-.mat-grid-list {
-    width: 60%;
+mat-dialog-content form {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: stretch;
 }
 
-.tileImg {
-    width: 50px;
+mat-dialog-content form .form-inputs {
+    align-self: center;
+    width: 300px;
 }
 
-.mat-grid-tile img {
-    width: 50px;
+mat-form-field {
+    width: 300px;
 }
+
+.buttons {
+    margin-top: 16px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    column-gap: 16px;
+}
+
+.buttons .guardarBtn {
+    background: var(--main-color2);
+    color: white;
+}
+
