--- a/src/app/dashboard/components/exercises/questions/questions-list/questions-list.component.html
+++ b/src/app/dashboard/components/exercises/questions/questions-list/questions-list.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <h2>Ejercicios para curso: {{course?.nombre}}</h2>
+    <h2>Preguntas</h2>
     <mat-form-field appearance="legacy" class="search">
         <mat-label>Buscar</mat-label>
         <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Buscar">
@@ -8,45 +8,58 @@
     </mat-form-field>
     <button
       mat-raised-button
-      (click)="openDialog(null)"
+      (click)="createOrEditQuestion(null)"
       style="background: var(--main-color2); color: white;">Crear nuevo</button>
     <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
+
+       <!-- posicion -->
+       <ng-container matColumnDef="posicion">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header id="posicion">No.</th>
+        <td
+          mat-cell
+          *matCellDef="let element"
+          class="position">
+            {{ element.position }}
+        </td>
+      </ng-container>
   
-      <!-- nombre del curso -->
+      <!-- pregunta -->
       <ng-container matColumnDef="nombre">
         <th mat-header-cell *matHeaderCellDef mat-sort-header id="nombre">Nombre</th>
         <td
           mat-cell
           *matCellDef="let element"
           class="name">
-            {{ element.nombre }}
+            {{ parseHTML(element.question) }}
         </td>
       </ng-container>
   
-      <!-- preguntas -->
-      <ng-container matColumnDef="preguntas">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header id="preguntas">No. preguntas</th>
-        <td mat-cell *matCellDef="let element">{{ answersQuantity(element.id) }}</td>
+      <!-- tipo de pregunta -->
+      <ng-container matColumnDef="tipo">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header id="tipo">Tipo de pregunta</th>
+        <td mat-cell *matCellDef="let element">{{ questionType(element.type) }}</td>
       </ng-container>
   
       <!-- botones de acción -->
       <ng-container matColumnDef="actions">
         <th mat-header-cell *matHeaderCellDef id="acciones">Acciones</th>
         <td mat-cell *matCellDef="let element" class="buttons">
+          <!-- Editar pregunta -->
           <button
             mat-stroked-button
             color="primary"
             matTooltip="Editar curso"
-            (click)="openDialog(element)">
+            (click)="createOrEditQuestion(element)">
             <mat-icon style="color: darkgoldenrod;">edit</mat-icon>
           </button>
-          <button
+          <!-- <button
             mat-stroked-button
             color="primary"
             matTooltip="Agregar preguntas"
             (click)="goToQuestionList(element.id)">
             <mat-icon style="color: black;">build</mat-icon>
-          </button>
+          </button> -->
+          <!-- Eliminar pregunta -->
           <button mat-stroked-button color="secondary" (click)="deleteUser(element)">
             <mat-icon>delete</mat-icon>
           </button>
