--- a/src/app/course-view/components/navigation/navigation.component.scss
+++ b/src/app/course-view/components/navigation/navigation.component.scss
@@ -1,3 +1,9 @@
+$bg: #2f2f2f;
+$fg: #06c17f;
+$border-width: .2rem;
+$corner-size: 2rem;
+$dur: .5s;
+
 .sidenav-container {
   height: 100%;
 }
@@ -30,6 +36,11 @@
   {
     color:white;
   }
+  span
+  {
+    width: 100%;
+    padding-left: 15px;
+  }
 }
 
 .headerSideBar
@@ -37,9 +48,27 @@
   height:auto;
   display: flex;
   flex-direction: column;
+  width: 100%;
   img
   {
     margin:auto;
+  }
+  .volver
+  {
+    p
+    {
+      padding:0px;
+      margin: 0px;
+      font-size: 2.5rem;
+      background-color: var(--main-color-rgb2) ;
+      width: 20px;
+      padding: 10px;
+    }
+    cursor: pointer;
+    width: 100%;
+    text-align: center;
+    margin-bottom: 30px;
+    color:white;
   }
 }
 
@@ -53,7 +82,6 @@
 
 .sidenav .mat-toolbar {
   background: inherit;
-  padding-top: 24px;
 }
 
 .sidenav .mat-toolbar a img {
@@ -70,8 +98,92 @@
   color:white;
 }
 
-.mat-icon
+a .mat-icon
 {
   color: var(--main-color2);
   margin-right: 10px;
+}
+
+ngx-extended-pdf-viewer{
+  min-height: 100%;
+}
+
+.mat-toolbar
+{
+  padding:0px;
+  margin-right: 10px;
+}
+
+.foro{
+  margin-top: 1rem;
+  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) ;
+  width:90%;
+  margin: 1.5rem auto;
+  padding:1.5rem;
+  h3
+  {
+    font-weight:bold;
+    font-size: 1.2rem;
+  }
+}
+
+.corner-button {
+  font-family: 'Lato', sans-serif;
+  letter-spacing: .02rem;
+  cursor: pointer;
+  background: transparent;
+  border: $border-width solid currentColor;
+  padding: 1rem 1rem;
+  font-size: 1rem;
+  color: $fg;
+  position: relative;
+  transition: color $dur;
+
+  &:hover {
+    color: var(--main-color2);
+    &::before { width: 0; }
+    &::after { height: 0; }
+  }
+  &:active {
+    border-width: $border-width / 2;
+  }
+  
+  //bit lame about the extra span. 
+  //it's to get the text to appear on top of the psewudo elements. is there a dom-less way to do it?
+  span {
+    position: relative;
+    z-index: 2;
+  }
+  &::before, &::after {
+    content: '';
+    position: absolute;
+    background: white;
+    z-index: 1;
+    transition: all $dur;
+  }
+  //the 101% is because of a pixel rounding issue in firefox
+  &::before {
+    width: calc(100% - #{$corner-size});
+    height: calc(101% + #{$border-width * 2});
+    top: -$border-width;
+    left: 50%;
+    transform: translateX(-50%);
+  }
+  &::after {
+    height: calc(100% - #{$corner-size});
+    width: calc(101% + #{$border-width * 2});
+    left: -$border-width;
+    top: 50%;
+    transform: translateY(-50%);
+  }
+}
+
+.corner-button2
+{
+  margin-left: 1.5rem;
+  &:hover {
+    color: #08D5FE;
+    &::before { width: 0; }
+    &::after { height: 0; }
+  }
 }
