--- a/src/app/dashboard/components/exercises/questions/questions-list/questions-list.component.html
+++ b/src/app/dashboard/components/exercises/questions/questions-list/questions-list.component.html
@@ -60,7 +60,7 @@
             <mat-icon style="color: black;">build</mat-icon>
           </button> -->
           <!-- Eliminar pregunta -->
-          <button mat-stroked-button color="secondary" (click)="deleteUser(element)">
+          <button mat-stroked-button color="secondary" (click)="deleteQuestion(element)">
             <mat-icon>delete</mat-icon>
           </button>
         </td>
