avance ejercicio rellenar blancos

--- a/src/app/dashboard/components/exercises/questions/question-create/question-create.component.scss
+++ b/src/app/dashboard/components/exercises/questions/question-create/question-create.component.scss
@@ -169,3 +169,12 @@ main {
     width: 100%;
     border-bottom: 1px solid gray;
 }
+
+.blancos {
+    font-size: 1.1rem;
+}
+
+.blancos p span {
+    color: darkblue;
+    font-weight: 600;
+}
