--- a/src/app/dashboard/components/exercises/questions/question-create/question-create.component.html
+++ b/src/app/dashboard/components/exercises/questions/question-create/question-create.component.html
@@ -145,7 +145,6 @@
                                         </mat-option>
                                     </mat-select>
                                 </mat-form-field>
-                                
                             </div>
                         </div>
                         <h3>Relacionar con</h3>
@@ -165,6 +164,75 @@
                             <button color="warn" [disabled]="questions.length <= 2" mat-raised-button (click)="deleteAnswer()">Quitar respuesta</button>
                             <button mat-raised-button (click)="goBack()"><<< Cancelar</button>
                         </div>
+                    </div>
+                </div>
+
+                <!-- Respuesta Libre -->
+                <div *ngIf="item.value === 5">
+                    <!-- Editor de texto para la pregunta -->
+                    <div class="question-editor">
+                        <h3>{{edit ? 'Editar' : 'Añadir'}} Pregunta: {{ item.name }}</h3>
+                        <div class="mat-form-field-wrapper">
+                            <editor
+                            apiKey="fa82nlmdggdzt2rwcpx7k706ohjcnf9wo3ioar2p06d10yyk"
+                            class="mat-elevation-z1"
+                            [(ngModel)]="question"
+                            (onInit)="handleEditorInit($event)"
+                            [init]="{
+                                icons: 'material',
+                                skin: 'borderless',
+                                plugins: ['wordcount', 'lists', 'image imagetools', 'media'],
+                                menubar: false,
+                                min_height: 350,
+                                width : '750',
+                                toolbar: 'undo redo | styleselect | bold italic | alignleft aligncenter alignright alignjustify | outdent indent | numlist bullist | image | media',
+                                media_live_embeds: true
+                            }"
+                            ></editor>
+                        </div>
+                    </div>
+                    <div class="buttons">
+                        <button mat-raised-button color="primary" [disabled]="!question" (click)="saveFreeAnswer()">Guardar pregunta</button>
+                        <button mat-raised-button (click)="goBack()"><<< Cancelar</button>
+                    </div>
+                </div>
+                <!-- Rellenar blancos -->
+                <div *ngIf="item.value === 3">
+                    <!-- Editor de texto para la pregunta -->
+                    <div class="question-editor">
+                        <h3>{{edit ? 'Editar' : 'Añadir'}} Pregunta: {{ item.name }}</h3>
+                        <p style="font-weight: 500; margin-bottom: 16px;">
+                            Escriba el texto debajo, y use corchetes [(...)] para definir uno o más espacios en blanco.
+                        </p>
+                        <div class="mat-form-field-wrapper">
+                            <editor
+                            apiKey="fa82nlmdggdzt2rwcpx7k706ohjcnf9wo3ioar2p06d10yyk"
+                            class="mat-elevation-z1"
+                            [(ngModel)]="question"
+                            (ngModelChange)="questionChange($event)"
+                            (onInit)="handleEditorInit($event)"
+                            [init]="{
+                                icons: 'material',
+                                skin: 'borderless',
+                                plugins: ['wordcount', 'lists'],
+                                menubar: false,
+                                min_height: 350,
+                                width : '750',
+                                toolbar: 'undo redo | styleselect | bold italic | alignleft aligncenter alignright alignjustify | outdent indent | numlist bullist',
+                                media_live_embeds: true
+                            }"
+                            ></editor>
+                        </div>
+                    </div>
+                    <div>
+                        <h3>Palabras por encontrar</h3>
+                        <div class="blancos" *ngFor="let word of whiteWords">
+                            <p>[ <span>{{ word }}</span> ]</p>
+                        </div>
+                    </div>
+                    <div class="buttons">
+                        <button mat-raised-button color="primary" [disabled]="!question" (click)="saveWhite()">Guardar pregunta</button>
+                        <button mat-raised-button (click)="goBack()"><<< Cancelar</button>
                     </div>
                 </div>
 
