Agregar ejercicios a lecciones terminado

--- a/src/app/dashboard/components/cursos/course-home/course-home.component.html
+++ b/src/app/dashboard/components/cursos/course-home/course-home.component.html
@@ -38,10 +38,6 @@
 
             <div class="options">
                 <a (click)="goToExercises()">Ejercicios</a>
-                <!-- <div class="icons">
-                    <mat-icon>visibility</mat-icon>
-                    <mat-icon>edit</mat-icon>
-                </div> -->
             </div>
         </div>
 
@@ -50,10 +46,6 @@
 
             <div class="options">
                 <a>Foros</a>
-                <!-- <div class="icons">
-                    <mat-icon>visibility</mat-icon>
-                    <mat-icon>edit</mat-icon>
-                </div> -->
             </div>
         </div>
 
@@ -62,12 +54,17 @@
 
             <div class="options">
                 <a>Anuncios</a>
-                <!-- <div class="icons">
-                    <mat-icon>visibility</mat-icon>
-                    <mat-icon>edit</mat-icon>
-                </div> -->
             </div>
         </div>
+
+        <div class="card">
+            <div class="img"><img src="/assets/icons/biblioteca.png" alt=""></div>
+
+            <div class="options">
+                <a href="https://biblioteca.chym-ndt.com/" target="_blank">Biblioteca Virtual</a>
+            </div>
+        </div>
+
     </section>
     <section class="buttons">
         <button mat-button (click)="goBack()" ><< Volver a lista de cursos</button>
