--- a/src/app/dashboard/components/lessons/lesson-content-list/lesson-content-list.component.html
+++ b/src/app/dashboard/components/lessons/lesson-content-list/lesson-content-list.component.html
@@ -64,7 +64,7 @@
             (click)="goToConfig(element.id)">
             <mat-icon style="color: grey;">build</mat-icon>
           </button>
-          <button mat-stroked-button color="secondary" (click)="deleteUser(element)">
+          <button mat-stroked-button color="secondary" (click)="deleteContent(element)">
             <mat-icon>delete</mat-icon>
           </button>
         </td>
