--- a/src/app/dashboard/components/main/main.component.html
+++ b/src/app/dashboard/components/main/main.component.html
@@ -16,7 +16,7 @@
           </mat-card-title>
         </mat-card-header>
         <mat-card-content class="dashboard-card-content">
-          <div *ngIf="card.title==='Usuarios'">
+          <div *ngIf="card.title==='Anuncios'">
             <app-carousel></app-carousel>
           </div>
 
