--- a/src/app/dashboard/components/ads/carousel/carousel.component.html
+++ b/src/app/dashboard/components/ads/carousel/carousel.component.html
@@ -1,22 +1,23 @@
 <mat-carousel
-timings="600ms ease-in"
-[autoplay]="true"
-interval="5000"
-maxWidth="auto"
-proportion="40"
-slides="5"
-[loop]="true"
-[hideArrows]="false"
-[hideIndicators]="false"
-[useKeyboard]="true"
-[useMouseWheel]="false"
-orientation="ltr"
+    timings="600ms ease-in"
+    [autoplay]="true"
+    interval="5000"
+    maxWidth="auto"
+    proportion="50"
+    slides="5"
+    [loop]="true"
+    [hideArrows]="false"
+    [hideIndicators]="false"
+    [useKeyboard]="true"
+    [useMouseWheel]="false"
+    orientation="ltr"
 >
-<mat-carousel-slide
-    #matCarouselSlide
-    *ngFor="let slide of listAds; let i = index"
-    [image]="slide.imagen"
-    overlayColor="#00000040"
-    [hideOverlay]="false"
-></mat-carousel-slide>
+    <mat-carousel-slide
+        #matCarouselSlide
+        *ngFor="let slide of listAds; let i = index"
+        [image]="slide.imagen"
+        overlayColor="#00000000"
+        [hideOverlay]="false"
+    >
+    </mat-carousel-slide>
 </mat-carousel>
