--- a/src/app/dashboard/components/exercises/questions/question-create/question-create.component.html
+++ b/src/app/dashboard/components/exercises/questions/question-create/question-create.component.html
@@ -17,6 +17,17 @@
         </mat-radio-group>
     </section>
 
+    <section *ngIf="!selected">
+        <div class="buttons">
+            <button
+                mat-raised-button
+                (click)="goBack()"
+                style="background: var(--main-color-rgb2); color: white;">
+                <<< Regresar
+            </button>
+        </div>
+    </section>
+
     <section class="question-options">
         <div *ngFor="let item of options">
             <div *ngIf="item.state">
@@ -78,7 +89,7 @@
                                 <p>{{item.value}}</p>
                                 <mat-checkbox
                                     [(ngModel)]="item.respuesta"
-                                    color="primary">
+                                    color="primary"> {{ item.respuesta }}
                                 </mat-checkbox>
                                 <div>
                                     <textarea [(ngModel)]="item.answer"></textarea>
@@ -202,7 +213,7 @@
                     <div class="question-editor">
                         <h3>{{edit ? 'Editar' : 'Añadir'}} Pregunta: {{ item.name }}</h3>
                         <p style="font-weight: 500; margin-bottom: 16px;">
-                            Escriba el texto debajo, y use corchetes [(...)] para definir uno o más espacios en blanco.
+                            Escriba el texto debajo, y use corchetes [{{ '{' }}...{{ '}' }}] para definir uno o más espacios en blanco.
                         </p>
                         <div class="mat-form-field-wrapper">
                             <editor
