--- a/src/app/home/components/main/main.component.html
+++ b/src/app/home/components/main/main.component.html
@@ -1,3 +1,7 @@
 <app-hero></app-hero>
 <app-courses id="cursos"></app-courses>
+<div class="anuncios">
+    <h2>Novedades</h2>
+    <app-carousel></app-carousel>
+</div>
 <app-contact id="contactanos"></app-contact>
